Sonar corrections.